--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ py==1.11.0
 pyparsing==3.0.7
 pytest==7.1.1
 pytest-describe==2.0.1
+pytest-django==4.5.2
 python-dateutil==2.8.2
 six==1.16.0
 sqlparse==0.4.2
